fix(offcanvas): Retira a necessidade de mudar o overflow do header

--- a/resources/sass/components/_fmd-header.scss
+++ b/resources/sass/components/_fmd-header.scss
@@ -10,7 +10,12 @@ $is-header-over-banner: false;
 	left: 0;
 	right: 0;
 	z-index: $zindex-sticky;
+	margin-top: 0;
 	transition: $transition-base;
+
+	&-is-hidden {
+		margin-top: calc(var(--header-height) * -1);
+	}
 
 	&-is-fixed {
 		background: $body-bg;
@@ -18,5 +23,5 @@ $is-header-over-banner: false;
 }
 
 body {
-	 padding-top: if($is-header-over-banner, 0px, var(--header-height));
+	padding-top: if($is-header-over-banner, 0px, var(--header-height));
 }
